--- a/development/terminalfour/src/sass/studenthubhome.scss
+++ b/development/terminalfour/src/sass/studenthubhome.scss
@@ -513,6 +513,7 @@ body.home .calendar .day {
   padding: 10px;
   color: #fff;
   background-color: rgba(209, 16, 66, 100);
+  overflow: hidden;
 }
 
 body.home .calendar .day:hover {
@@ -747,10 +748,7 @@ body.home .module-small [class*="col-"] {
   }
 
   body.home {
-    background: url("https://msudenver.edu/media/studenthub/images/Campus-Background-comp.jpg") bottom;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
+    background-color: none;
     width: 100%;
   }
 
