--- a/development/terminalfour/src/sass/studenthubhome.scss
+++ b/development/terminalfour/src/sass/studenthubhome.scss
@@ -15,10 +15,6 @@
 @import "ContentTypes/stylestoimport";
 // @import "ContentTypes/card";
 
-.zebra {
-  background: #F7F7F7;
-}
-
 .promospace {
   margin-top: 30px;
   position: relative;
@@ -26,14 +22,7 @@
   overflow: hidden;
 }
 
-.promospace .promotab1 h3 {
-  color: #00447C;
-  margin-top: 25px;
-  margin-bottom: 5px;
-  font-size: 15px;
-  font-size: 1.5rem;
-}
-
+.promospace .promotab1 h3,
 .promospace .promotab2 h3,
 .promospace .promotab3 h3 {
   color: #ffffff;
@@ -50,13 +39,7 @@
 }
 
 .promospace .promotab1 a,
-.promospace .promotab1 p {
-  font-size: 14px;
-  color: #00447c;
-  font-weight: 200;
-  padding-bottom: 15px;
-  margin: 0 15px;
-}
+.promospace .promotab1 p,
 .promospace .promotab2 a,
 .promospace .promotab2 p,
 .promospace .promotab3 a,
@@ -82,19 +65,15 @@
 }
 
 .promotab1 {
-  background: #FFF;
-  border-top: 3px solid #FFFFFF;
+  background: #e67e22;
 }
 
 .promotab2 {
-  background: rgba(209, 18, 66, 100);
-  border-top: 3px solid #FFFFFF;
+  background: #16a085;
 }
 
 .promotab3 {
-  background: rgba(112, 122, 122, 100);
-  border-top: 3px solid #FFFFFF;
-  border-bottom: 3px solid #FFFFFF;
+  background: #8e44ad;
 }
 
 .fa-chevron-right {
@@ -129,32 +108,34 @@
     padding: 0;
   }
 
-  .promotab1 {
-    background: #fff;
-    border-top: 3px solid #FFFFFF;
+  .promospace .promotab1 {
+    background: rgba(230, 126, 34, 0.75);
+    border-top: 3px solid #d35400;
+    border-bottom: 3px solid #d35400;
   }
-  
-  .promotab2 {
-    background: rgba(209, 18, 66, 100);
-    border-top: 3px solid #FFFFFF;
+
+  .promospace .promotab2 {
+    background: rgba(0, 118, 95, 0.75);
+    border-top: 3px solid #00765f;
+    border-bottom: 3px solid #00765f;
   }
-  
-  .promotab3 {
-    background: rgba(112, 122, 122, 100);
-    border-top: 3px solid #FFFFFF;
-    border-bottom: 3px solid #FFFFFF;
+
+  .promospace .promotab3 {
+    background: rgba(102, 0, 142, 0.75);
+    border-top: 3px solid #66008e;
+    border-bottom: 3px solid #66008e;
   }
 }
 
 #tabs li a {
   height: 57px;
-  font-weight: 600;
   font-family: "Lato", sans-serif;
   font-size: 13px;
+  color: #fff;
   padding: 5px;
   text-decoration: none;
   outline: none;
-  //
+  text-transform: uppercase;
 }
 
 .tab-container {
@@ -174,7 +155,7 @@
 // }
 //
 // footer .font-alt {
-//  
+//   text-transform: uppercase;
 //   letter-spacing: 2px;
 //   color: #1f4d69;
 // }
@@ -219,20 +200,24 @@
 }
 
 body.home {
+  background: url("https://msudenver.edu/media/studenthub/images/Campus-Background-mobile.jpg")
+    bottom;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   height: 100%;
   font-family: "Lato", sans-serif;
   font-weight: 400;
 }
 
 body.home section {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 body.home h1 {
   font-size: 40px;
   font-size: 4rem;
-  //
+  text-transform: uppercase;
   font-weight: normal;
   line-height: 0.8;
   margin: 0 0 0 40px;
@@ -244,7 +229,7 @@ body.home h2 {
   font-weight: 700;
   font-size: 22px;
   font-size: 2.2rem;
-  //
+  text-transform: uppercase;
   color: #ffffff;
   margin: 30px 0 -10px;
   position: relative;
@@ -254,41 +239,46 @@ body.home h2 {
 
 body.home h2:before {
   display: inline-block;
-  // width: 57px;
+  width: 57px;
   height: 57px;
-  // background: url("https://msudenver.edu/media/studenthub/images/sticker.png") no-repeat center bottom;
-  content: '';
+  background: url("https://msudenver.edu/media/studenthub/images/sticker.png")
+    no-repeat center bottom;
+  content: "";
   vertical-align: middle;
   margin-right: 15px;
 }
 
 body.home h3 {
-  font-weight: 600;
-  font-size: 2em;
+  font-weight: 900;
+  font-size: 18px;
+  font-size: 1.8rem;
+  text-transform: uppercase;
   margin: 8px 0 0;
-  color: #00447C;
+  color: #ffffff;
+  text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
 }
 
-// body.home h3:before {
-//   display: inline-block;
-//   width: 57px;
-//   height: 57px;
-//   background: url("https://msudenver.edu/media/studenthub/images/sticker.png") no-repeat center right;
-//   content: '';
-//   text-align: right;
-//   margin: 0 8px 8px 0;
-//   vertical-align: middle;
-// }
+body.home h3:before {
+  display: inline-block;
+  width: 57px;
+  height: 57px;
+  background: url("https://msudenver.edu/media/studenthub/images/sticker.png")
+    no-repeat center right;
+  content: "";
+  text-align: right;
+  margin: 0 8px 8px 0;
+  vertical-align: middle;
+}
 
 body.home h4 {
   font-weight: 500;
   font-size: 18px;
   font-size: 1.8rem;
-
+  text-transform: uppercase;
   margin-bottom: 0;
   display: block;
   width: 100%;
-  color: #00447C;
+  color: #fff;
 }
 
 // body.home p {
@@ -303,13 +293,8 @@ body.home header .title {
   vertical-align: bottom;
 }
 
-body.home header {
-  background-color: #00447C;
-}
-
 body.home header .mainLogo {
-  width: 35%;
-  background: none;
+  max-width: 35%;
 }
 
 body.home .navbar-default {
@@ -318,7 +303,7 @@ body.home .navbar-default {
 }
 
 body.home .navbar-default .navbar-header {
-  background: #1f4d69;
+  background: #00447c !important;
 }
 
 body.home .navbar-default .navbar-collapse,
@@ -353,38 +338,28 @@ body.home .services {
 body.home .services .services-btn {
   border-radius: 0;
   display: inline-block;
-  background: rgba(255, 255, 255, 0.7);
-  border: 3px solid rgba(255, 255, 255, 100);
-  color: #00447C;
-  font-weight: 600;
+  background: #1f4d69 url("../images/bgGrid.jpg");
+  margin: 0 -1px 1px 0;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  color: #ffffff;
+  font-weight: 200;
   text-align: center;
   display: block;
+  font-size: 18px;
   font-size: 1.8rem;
-  margin-top: 10px;
-  margin-left: -7px;
-  margin-right: -7px;
-  height: 5em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  a {
-    font-weight: 600;
-  }
+  height: 80px;
+  margin: 0 -13px;
 }
 
 body.home .services .services-btn:hover {
-  background: #00447c;
+  background: #1f4d69;
   text-decoration: none;
-  a {
-    color: rgba(255, 255, 255, 100);
-    background-color: #00447c;
-  }
 }
 
 body.home .services a {
-  color: #00447C;
+  color: #ffffff;
   font-weight: 200;
-  // padding: 2em 0;
+  padding: 20px 0;
   text-align: center;
   display: block;
   font-size: 18px;
@@ -406,7 +381,6 @@ body.home .content {
   -webkit-box-align: center;
   align-items: center;
   min-height: 116px;
-  color: #00447C;
 }
 
 body.home .content .text-center {
@@ -418,8 +392,8 @@ body.home .content .text-center:hover {
 }
 
 body.home .content .description {
-  font-size: 1.5em;
-  // font-weight: 300;
+  font-size: 1em;
+  font-weight: 300;
 }
 
 body.home .newsfeed {
@@ -453,7 +427,7 @@ body.home .social .fa-stack {
 .social.text-center .fa-youtube {
   background-color: white;
   border-radius: 50px;
-  color: #45A8C7;
+  color: #45a8c7;
 }
 
 .social.text-center .fa-facebook:hover,
@@ -483,12 +457,12 @@ body.home .calendar .title .main {
 }
 
 body.home .calendar .title .semester {
-  //
+  text-transform: uppercase;
 }
 
 body.home .calendar .title .year {
   font-family: "Lato", sans-serif;
-  //
+  text-transform: uppercase;
   margin-right: 10px;
 }
 
@@ -511,26 +485,18 @@ body.home .calendar .day {
   height: 145px;
   border: 1px solid rgba(255, 255, 255, 0.5);
   padding: 10px;
-  color: #fff;
-  background-color: rgba(209, 16, 66, 100);
-  overflow: hidden;
+  background-color: rgba(30, 74, 101, 0.72);
 }
 
 body.home .calendar .day:hover {
-  background-color: #fff;
-  .date {
-    color: rgba(209, 16, 66, 100);
-  }
-  .event {
-    color: rgba(209, 16, 66, 100);
-  }
+  background: rgba(30, 74, 101, 0.9);
 }
 
 body.home .calendar .day .date {
   color: #ffffff;
   font-size: 12px;
   font-size: 1.2rem;
-
+  text-transform: uppercase;
   font-weight: 400;
 }
 
@@ -540,6 +506,7 @@ body.home .calendar .day .event {
   font-weight: 300;
   font-size: 14px;
   font-size: 1.4rem;
+  text-transform: uppercase;
   line-height: 1.3;
   margin-top: 10px;
 }
@@ -565,19 +532,10 @@ body.home .red {
   border-bottom: 1px solid rgba(255, 255, 255, 0.7);
 }
 
-body.home .white {
-  color: #707070;
-  padding: 10px;
-  border: 3px solid rgba(122, 122, 122, 0.5);
-  margin-left: 5px;
-  margin-top: 10px;
-  margin-right: 5px;
-  font-weight: 600;
-}
-
 .left-column {
   margin-bottom: 5px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .middle-column [class*="col-"] {
@@ -588,6 +546,7 @@ body.home .white {
   font-weight: 200;
   font-size: 18px;
   font-size: 1.8rem;
+  text-transform: uppercase;
   margin-bottom: 0;
   display: block;
   width: 100%;
@@ -608,11 +567,6 @@ body.home .white {
 
 .middle-column a .red:hover {
   background: rgba(191, 31, 23, 0.9);
-}
-
-a .white:hover {
-  background: #707070;
-  color: #fff;
 }
 
 body.home .module-small {
@@ -748,7 +702,11 @@ body.home .module-small [class*="col-"] {
   }
 
   body.home {
-    background-color: none;
+    background: url("https://msudenver.edu/media/studenthub/images/Campus-Background-comp.jpg")
+      bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     width: 100%;
   }
 
@@ -769,6 +727,7 @@ body.home .module-small [class*="col-"] {
     font-size: 12px;
     font-size: 1.2rem;
     color: #ffffff;
+    text-transform: uppercase;
     margin-right: 12px;
     letter-spacing: 1px;
   }
@@ -814,12 +773,16 @@ body.home .module-small [class*="col-"] {
     margin-top: -70px;
   }
 
+  body.home .services {
+    width: 90%;
+  }
+
   body.home .calendar .title:before {
     display: inline-block;
     width: 57px;
     height: 57px;
     background: url("../images/sticker.png") no-repeat center bottom;
-    content: '';
+    content: "";
     vertical-align: bottom;
     margin: 0 15px 0 -20px;
   }
