Change student hub style sheet

--- a/development/terminalfour/src/sass/studenthubhome.scss
+++ b/development/terminalfour/src/sass/studenthubhome.scss
@@ -303,7 +303,7 @@ body.home .navbar-default {
 }
 
 body.home .navbar-default .navbar-header {
-  background: #00447c !important;
+  background: #00447c;
 }
 
 body.home .navbar-default .navbar-collapse,
