--- a/www-root/style-assets/css/studenthubhome.css
+++ b/www-root/style-assets/css/studenthubhome.css
@@ -168,7 +168,9 @@ p {
   display: none;
 }
 
-.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
+.fb_iframe_widget,
+.fb_iframe_widget span,
+.fb_iframe_widget span iframe[style] {
   width: 100% !important;
   height: 450px;
 }
@@ -222,7 +224,12 @@ img {
   cursor: pointer;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Gotham A", "Gotham B", Open Sans, helvetica, arial, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -256,7 +263,7 @@ h1 {
 }
 
 .bordered {
-  box-shadow: 0 0 2px #AAA;
+  box-shadow: 0 0 2px #aaa;
   padding: 9px;
   border: 1px solid #ececec;
 }
@@ -265,12 +272,14 @@ h1 {
   color: #fff;
 }
 
-.img-thumbnail, .thumbnail {
+.img-thumbnail,
+.thumbnail {
   padding: 0.5em;
   margin: 1em;
 }
 
-.thumbnail > img, .thumbnail a > img {
+.thumbnail > img,
+.thumbnail a > img {
   padding: 10px !important;
 }
 
@@ -282,7 +291,7 @@ h1 {
   margin-top: 5px;
   height: auto;
   padding: 3px;
-  border: solid 1px #E4E4E4;
+  border: solid 1px #e4e4e4;
   border-radius: 6px;
   background-color: #fff;
 }
@@ -311,7 +320,7 @@ h1 {
 }
 
 hr {
-  border-top: 1px solid #7591BC;
+  border-top: 1px solid #7591bc;
   margin-top: 15px;
   margin-bottom: 15px;
 }
@@ -429,7 +438,7 @@ h4 {
 }
 
 .promotab1 {
-  background: #FFFFFF;
+  background: #ffffff;
   color: #003765;
 }
 
@@ -461,7 +470,7 @@ h4 {
   }
 
   .promospace .nav > li > a:focus,
-.promospace .nav > li > a:hover {
+  .promospace .nav > li > a:hover {
     text-decoration: none;
     background-color: rgba(238, 238, 238, 0);
   }
@@ -477,19 +486,19 @@ h4 {
 
   .promospace .promotab1 {
     background: #ffffff;
-    border-top: 3px solid #FFFFFF;
+    border-top: 3px solid #ffffff;
     color: #00447c;
   }
 
   .promospace .promotab2 {
     background: #d11242;
-    border-top: 3px solid #FFFFFF;
+    border-top: 3px solid #ffffff;
   }
 
   .promospace .promotab3 {
     background: #707a7a;
-    border-top: 3px solid #FFFFFF;
-    border-bottom: 3px solid #FFFFFF;
+    border-top: 3px solid #ffffff;
+    border-bottom: 3px solid #ffffff;
   }
 }
 #tabs li a {
@@ -687,7 +696,7 @@ body.home .content .description {
 }
 
 body.home .zebra {
-  background: #F7F7F7;
+  background: #f7f7f7;
 }
 
 body.home .newsfeed {
@@ -716,7 +725,7 @@ body.home .social .fa-stack {
 .social.text-center .fa-youtube {
   background-color: white;
   border-radius: 50px;
-  color: #45A8C7;
+  color: #45a8c7;
 }
 
 .social.text-center .fa-facebook:hover,
@@ -838,7 +847,7 @@ body.home .red {
   text-align: center;
 }
 
-.middle-column [class*=col-] {
+.middle-column [class*="col-"] {
   padding: 0 2px;
 }
 
@@ -876,7 +885,7 @@ body.home .module-small.bg-deep {
   background: #1f4d69;
 }
 
-body.home .module-small [class*=col-] {
+body.home .module-small [class*="col-"] {
   padding: 0 15px;
 }
 
@@ -960,7 +969,7 @@ body.home .module-small [class*=col-] {
 }
 
 @media (min-width: 768px) {
-  .left-column [class*=col-] {
+  .left-column [class*="col-"] {
     padding: 0;
   }
 
@@ -969,7 +978,7 @@ body.home .module-small [class*=col-] {
   }
 
   body.home {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -1045,15 +1054,15 @@ body.home .module-small [class*=col-] {
 
   body.home .calendar .title:before {
     display: inline-block;
-    width: 57px;
+    width: 0px;
     height: 57px;
-    background: url("../images/sticker.png") no-repeat center bottom;
+    background: none;
     vertical-align: bottom;
     margin: 0 15px 0 -20px;
   }
 
   body.home .left-column,
-body.home .middle-column {
+  body.home .middle-column {
     display: inline-block;
     vertical-align: top;
   }
