--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -14633,7 +14633,7 @@ hr.pres-inner-header {
     display: none;
   }
 }
-.test {
+.test1 {
   display: none;
 }
 /*# sourceMappingURL=main-style.css.map */
