--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+10:28 AM 5/11/2020@charset "UTF-8";
 /**
     ===========================================
             Start Bootstrap  v 3.3.7
